# sample-aws-idp-pipeline

./: .env.local.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  cleanup-codebuild.yml  deploy-codebuild.yml  deploy.sh  destroy-codebuild.yml  destroy.sh  mise.toml  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: deploy-docs.yml
docs/: IDP_Documentation_ko.docx  astro.config.mjs  package.json  quick_deploy.md  quick_deploy_kr.md
docs/faq/: FAQ_ko.md
docs/features/: FEATURES_en.md  FEATURES_ja.md  FEATURES_ko.md
docs/readme/: README_ja.md  README_ko.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/en/: deployment.md  features.md  index.mdx
docs/src/content/docs/ja/: deployment.md  features.md  index.mdx
docs/src/content/docs/ko/: deployment.md  features.md  index.mdx
docs/vectordb/: VECTORDB_en.md  VECTORDB_ja.md  VECTORDB_ko.md
