[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [ "idp_v2.backend", "idp_v2.idp_agent" ]

[tool.uv.workspace]
members = [ "packages/agents/idp-agent/idp_agent", "packages/backend" ]

[tool.uv.sources."idp_v2.backend"]
workspace = true

[tool.uv.sources."idp_v2.idp_agent"]
workspace = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
